@@ -205,6 +205,7 @@ Version 1.3
  - Issue #416 and Pull Request #506 - ValueShort and ValueSchedule were
    using wrong Value Storage enums. Enhance Value::VerifyRefreshedValue to
    handle almsot all types (Except Schedule) (Justin)
+ - Issue #501 - Fix ThermostatFanMode when checking for Valid Modes (Justin)
 
 Version 1.2 
  - Released on 15/10/14
